centered image and flexbox items in columns and rows

--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
             <a href="url">Header link three</a>
         </div>
         <div class="awesome">
-            <p class="website-awesome">This Website is <br>Awesome</p>
-            <p class="awesome-pups">This website is about puppa-dogs. <br>If you don't like puppa-dogs then you don't need to be here.</p>
+            <div class="description">
+                <p class="website-awesome">This Website is <br>Awesome</p>
+                <p class="awesome-pups">This website is about puppa-dogs. <br>If you don't like puppa-dogs then you don't
+                    need to be here.</p>
+                <button class="btn">Sign Up</button>
+            </div>
+            <div class="header-image">
+                <img src="./Images/siberianhuskytrio.jpeg">
+            </div>            
         </div>
+
     </div>
     <div class="body-container">
 
