Added 4 more images with text.

--- a/index.html
+++ b/index.html
@@ -19,18 +19,37 @@
         <div class="awesome">
             <div class="description">
                 <p class="website-awesome">This Website is <br>Awesome</p>
-                <p class="awesome-pups">This website is about puppa-dogs. <br>If you don't like puppa-dogs then you don't
+                <p class="awesome-pups">This website is about puppa-dogs. <br>If you don't like puppa-dogs then you
+                    don't
                     need to be here.</p>
                 <button class="btn">Sign Up</button>
             </div>
             <div class="header-image">
-                <img src="./Images/siberianhuskytrio.jpeg">
-            </div>            
+                <img src="./Images/siberianhuskytrio.jpeg" class="header-image">
+            </div>
         </div>
 
     </div>
+    <p class="header-statement">Meet our Professionals</p>
     <div class="body-container">
-
+    <div class="working-huskies">
+        <div class="info">
+        <img src="./Images/Programmerhusky1.jpeg" class="husky-image">
+        <div class="text">Charles our Programmer</div>
+        </div>
+        <div class="info">
+        <img src="./Images/secretaryhusky4.jpeg" class="husky-image">
+        <div class="text">Stan our secretary</div>
+        </div>
+        <div class="info">
+        <img src="./Images/saleshusky1.jpeg" class="husky-image">
+        <div class="text">Jim runs sales</div>
+        </div>
+        <div class="info">
+        <img src="./Images/ceohusky1.jpeg" class="husky-image">
+        <div class="text">Christopher our CEO</div>
+        </div>
+    </div>
     </div>
     <div class="footer-container">
 
