changed some text under images and added a quote.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="working-huskies">
         <div class="info">
         <img src="./Images/Programmerhusky1.jpeg" class="husky-image">
-        <div class="text">Charles our Programmer</div>
+        <div class="text">Charles our CTO</div>
         </div>
         <div class="info">
         <img src="./Images/secretaryhusky4.jpeg" class="husky-image">
@@ -43,7 +43,7 @@
         </div>
         <div class="info">
         <img src="./Images/saleshusky1.jpeg" class="husky-image">
-        <div class="text">Jim runs sales</div>
+        <div class="text">Jim our sales manager</div>
         </div>
         <div class="info">
         <img src="./Images/ceohusky1.jpeg" class="husky-image">
@@ -52,7 +52,8 @@
     </div>
     </div>
     <div class="footer-container">
-
+        <div class="footer-text">"Don't eat the yellow snow"</div>
+        <div class="footer-author">- Christopher C.E.O.</div>
     </div>
 </body>
 
