fixed the quote and added a footer

--- a/index.html
+++ b/index.html
@@ -51,10 +51,22 @@
         </div>
     </div>
     </div>
-    <div class="footer-container">
-        <div class="footer-text">"Don't eat the yellow snow"</div>
-        <div class="footer-author">- Christopher C.E.O.</div>
+    <div class="quote-container">
+        <div class="quote-text">"Don't eat the yellow snow"</div>
+        <div class="quote-author">- Christopher C.E.O.</div>
     </div>
-</body>
-
-</html>
+    <div class="action-container">
+        <div class="action-box">
+          <div class="action-call">
+            <div class="action-text-bold">Call to Action! It's time!</div>
+            <div class="action-text">Sign up for our product by clicking that button right over there!</div>
+          </div>
+          <button class="btn1">Sign Up</button>
+        </div>
+      </div>
+      <div class="footer-container">
+        <div class="footer-text">Copyright © The Odin Project 2021</div>
+      </div>
+    </body>
+    
+    </html>
